# vsnlogger

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  misra-cpp-standard.md  run_docker.bat
example/: CMakeLists.txt
example/example_app/: CMakeLists.txt  main_appA.cpp  main_appB.cpp
example/example_lib/: CMakeLists.txt  libA.cpp  libA.h  libB.cpp  libB.h
vsnlogger/: CMakeLists.txt
vsnlogger/cmake/: vsnlogger-config.cmake.in
vsnlogger/include/: error_codes.h
vsnlogger/include/vsnlogger/: config.h  formatters.h  logger.h  logger.inl  macros.h  sinks.h
vsnlogger/src/: config.cpp  formatters.cpp  logger.cpp  sinks.cpp
